--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul class="nav-menu">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">お知らせ</a></li>
+                    <li><a href="https://aorin5gogo.github.io/puyayamadayori-news/">お知らせ</a></li>
                     <li><a href="#">記事</a></li>
                     <li><a href="#">イベント情報</a></li>
                     <li><a href="#">お問合せ</a></li>
@@ -44,7 +44,7 @@
                 <p>記事の投稿：「夏の富士登山に潜む危険」に関する記事を投稿しました。（20xx.07.20）</p>
                 <span class="tab">イベント</span>
                 <p>イベント予約開始：上高地ツアー20xx.08.11～13日、2泊3日！（20xx.07.05）</p>
-                <a class="more" id="news-more" href="">>>もっと見る</a>
+                <a class="more" id="news-more" href="https://aorin5gogo.github.io/puyayamadayori-news/">>>もっと見る</a>
                 </div>
             </div>
             <article class="wrapper">
