--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="https://aorin5gogo.github.io/puyayamadayori-news/">お知らせ</a></li>
-                    <li><a href="#">記事</a></li>
+                    <li><a href="https://aorin5gogo.github.io/puyayamadayori-article/">記事</a></li>
                     <li><a href="#">イベント情報</a></li>
                     <li><a href="#">お問合せ</a></li>
                 </ul>
