--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="https://aorin5gogo.github.io/puyayamadayori-news/">お知らせ</a></li>
                     <li><a href="https://aorin5gogo.github.io/puyayamadayori-article/">記事</a></li>
                     <li><a href="#">イベント情報</a></li>
-                    <li><a href="#">お問合せ</a></li>
+                    <li><a href="https://aorin5gogo.github.io/puyayamadayori-contact/">お問合せ</a></li>
                 </ul>
             </nav>
         </div>
